fix: navigation alignment

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -48,6 +48,7 @@ nav {
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .hr {
